<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brandy"
    tools:context=".ui.main.login.LoginActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_puitika"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:elevation="20dp"
        android:src="@drawable/ic_puitika"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_username"
        style="@style/TextAppearance.Material3.BodyLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:paddingStart="3dp"
        android:text="@string/username"
        android:textFontWeight="900"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/et_username"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <EditText
        android:id="@+id/et_username"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-11dp"
        android:drawableEnd="@drawable/person_black_ic"
        android:hint="@string/username_login_hint"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no"
        android:textCursorDrawable="@color/dark_blue_green"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_username" />

    <TextView
        android:id="@+id/tv_password"
        style="@style/TextAppearance.Material3.BodyLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingStart="3dp"
        android:text="@string/password"
        android:textFontWeight="900"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/et_password"
        app:layout_constraintTop_toBottomOf="@+id/et_username" />

    <EditText
        android:id="@+id/et_password"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-11dp"
        android:drawableEnd="@drawable/password_ic"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textCursorDrawable="@color/dark_blue_green"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_password" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:elevation="20dp"
        android:paddingHorizontal="10dp"
        android:shadowColor="@color/shadow_color"
        android:shadowDy="5"
        android:shadowDx="2"
        android:shadowRadius="7"
        android:text="@string/app_name_capital"
        android:textColor="@color/soft_peach"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_puitika" />

    <View
        android:id="@+id/view3"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@drawable/bottom_shape_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_login"
        style="@style/TextAppearance.Material3.BodyLarge"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:paddingHorizontal="35dp"
        android:text="@string/login"
        android:textColor="@color/soft_peach"
        android:textFontWeight="900"
        android:textSize="18sp"
        android:backgroundTint="@color/golden"
        app:layout_constraintBottom_toTopOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view3" />

    <TextView
        android:id="@+id/tv_forgot_password"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="14dp"
        android:text="@string/forgot_password"
        android:textColor="@color/burnham"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/or"
        android:textColor="@color/burnham"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password" />

    <View
        android:id="@+id/view4"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/tv_or"
        app:layout_constraintEnd_toStartOf="@+id/tv_or"
        app:layout_constraintTop_toTopOf="@+id/tv_or" />

    <View
        android:id="@+id/view5"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/tv_or"
        app:layout_constraintStart_toEndOf="@+id/tv_or"
        app:layout_constraintTop_toTopOf="@+id/tv_or" />

    <ImageView
        android:id="@+id/iv_x"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_or"
        app:srcCompat="@drawable/x_ic" />

    <ImageView
        android:id="@+id/iv_facebook"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toEndOf="@+id/iv_x"
        app:layout_constraintTop_toBottomOf="@+id/tv_or"
        app:srcCompat="@drawable/facebook_ic" />

    <ImageView
        android:id="@+id/iv_google"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/iv_x"
        app:layout_constraintTop_toBottomOf="@+id/tv_or"
        app:srcCompat="@drawable/google_ic" />

    <TextView
        style="@style/TextAppearance.AppCompat.Body1"
        android:id="@+id/tv_need_account"
        android:layout_width="wrap_content"
        android:textSize="14dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/need_an_account"
        android:textColor="@color/burnham"
        app:layout_constraintEnd_toStartOf="@+id/tv_register"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/iv_x" />

    <TextView
        android:id="@+id/tv_register"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        android:layout_marginStart="16dp"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        android:elevation="20dp"
        android:text="@string/register"
        android:textColor="@color/burnham"
        app:layout_constraintEnd_toStartOf="@+id/view3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_need_account"
        app:layout_constraintTop_toBottomOf="@+id/iv_x" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="tv_username,et_username,tv_password,et_password" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="tv_username,et_username,tv_password,et_password" />


</androidx.constraintlayout.widget.ConstraintLayout>