<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#00000000"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="160dp"
        android:background="@drawable/rounded_form_confirm"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_asklogout"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:text="@string/confirm_ask"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="-12dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_nologout"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/button_Noconfirm"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_yeslogout"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/brandy"
                android:text="@string/button_Yesconfirm"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
